// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  
  <input
    className="sc-bxivhb iOkALr"
    data-mask=""
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern=".*"
    placeholder=""
    type="text"
    value=""
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  <label
    className="sc-bwzfXH eQhPVJ"
    htmlFor="input-with-label"
  >
     
    Text label
     
  </label>
  <input
    className="sc-bxivhb iOkALr"
    data-mask=""
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern=".*"
    placeholder=""
    type="text"
    value=""
  />
  
</div>
`;

exports[`Input component  with a regexp as pattern prop should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  
  <input
    className="sc-bxivhb iOkALr"
    data-mask=""
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern="\\\\d"
    placeholder=""
    type="text"
    value=""
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  
  <input
    className="sc-bxivhb bAMeUn"
    data-mask=""
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern=".*"
    placeholder=""
    type="text"
    value=""
  />
  <div
    className="sc-bdVaJa fIlZBq"
  >
    Error message
  </div>
</div>
`;
